--- a/resume.tex
+++ b/resume.tex
@@ -12,14 +12,14 @@
     % Contact Information
     \section{\mysidestyle Contact\\Information}
 
-       				                      \hfill phone: 09990683539          \vspace{0mm}\\\vspace{0mm}%
+       				                      \hfill phone: 09930493127, 08319619710      \vspace{0mm}\\\vspace{0mm}%
         					      \hfill e-mail: singhai.piyush@gmail.com  \vspace{0mm}\vspace{-4.5mm}%
 
     %__________________________________________________________________________________________________________________
     % Education
     \section{\mysidestyle Education}
 
-    \textbf{Indian Institute of Technology, Guwahati, Assam} \hfill \textbf{2007 -- 2009}\vspace{0mm}\\\vspace{0mm}%
+    \textbf{IIT Guwahati, Assam} \hfill \textbf{2007 -- 2009}\vspace{0mm}\\\vspace{0mm}%
     \textsl{M.Tech in Computer Science} \hfill \textsl{CGPA: 9.16/10}
 
     \textbf{IES IPS Academy Indore, MP} \hfill \textbf{2003 -- 2007}\vspace{0mm}\\\vspace{0mm}%
@@ -33,38 +33,57 @@
     \section{\mysidestyle Relevant Tools}
      \begin{itemize}
       \item OS : Linux, Windows
-      \item Programming Languages: C/C++, Python, Java
-      \item Frameworks/Applications: Android, Postfix, Django, PL/SQL, Apache, PostgreSQL,\\ 
-            FreeSWITCH, RabbitMQ
+      \item Programming Languages: Python, C/C++, Java
+      \item Frameworks/Applications: Docker, Redis, Django, DCOS, \\
+            Apache, FreeSWITCH, Mysql, Aurora RDS, MSSQL, RabbitMQ
+      \item OpsViz: Grafana, Telegraf, StatsD, Logstash, InfluxDB
      \end{itemize}
 
     %__________________________________________________________________________________________________________________
     % Professional Experience
     \section{\mysidestyle Work Experience}
 
-    \textbf{Knowlarity Communication, Gurgaon, Haryana}   \hfill \textsl{June 2010 -- present} \vspace{0mm}\\\vspace{0mm}%
+    \textbf{ScaleArc, Mumbai, Maharashtra }\hfill \textsl{Dec 2013 -- present}\vspace{0mm}\\\vspace{0mm}%
+    \textsl{Senior Member of Techinial Staff-II}      \begin{itemize}
+    \item \textsl{DBaaS: DataBase as a Service Platform}: 
+    \begin{enumerate}
+    \item Build a Platform using DCOS and Marathon
+    \item Created multiple MicroServices for Health Monitoring, Failover, User Management etc.
+    \item Run Scalearc Proxy inside the Container
+    \item Use OpsViz stack to Show Live monitor Graph and Real time Counters
+    \end{enumerate}
+    
+    \item Python API and Services
+    \begin{enumerate}
+    \item Research on Multiple Replication Technology of Mysql, MSSQL, Oracle and build a Automatic Failover Solution.  
+    \item Created a Services like Always On, Replication Monitor, Cluster Monitor etc.
+    \item Build Django Based API for Services and UI to communicate each other.
+    \item Design and Developed the Scalearc Installer using Puppet, Yum and RPM.
+    \item Worked on different issues related to Scalabilty of Services and Inter process communication of services.
+    \end{enumerate}
+    \end{itemize}
+      
+    \textbf{Mettl, Gurgaon, Haryana }\hfill \textsl{June 2013 -- Dec 2013}\vspace{0mm}\\\vspace{0mm}%
+    \textsl{Senior Software Engineer}   
+    \begin{itemize}
+    \item Worked For online Maths Platform Tutrr which enables students to practice maths
+    \item Worked on Advance Python Features, Maths complex lib Sympy
+    \end{itemize}
+    
+    \textbf{Knowlarity Communication, Gurgaon, Haryana}   \hfill \textsl{June 2010 -- July 2013} \vspace{0mm}\\\vspace{0mm}%
            \textsl{R\&D Engineer} 
     \begin{itemize}
-    
-     \item \textsl{Design and Development of Superfax:} \\
-      A software solution for fax. The product required understanding of the fax protocol and computer telephony integration.
-      The development has been done in a python-django framework. Responsibilities include Bug fixes, Deployments, Enhancements and Maintenance of Superfax.
-    
-      \item \textsl{Facebook Voicelet Application:}\\
-      Involved in design and development of SIP (session initiation protocol) bridge between a PSTN network and an IP network.
-      This includes the network layout for SIP and RTP connectivity among different heterogeneous UA (end clients).
-      G729, G7111 codecs are being used for data exchange in FreeSwitch also involved in the development of IVR engine 
-      at IP network side for interacting with facebook and many other social networking portals to upload user's recorded voice.
-
+     \item \textsl{Knowlus: Design and Development of Telephony Platform:} \\
+       A Telephony Platform that consists of Multiple Services like Incalld, Outcalld and FreeSWITCH to build solutions for virtual call centers, call bridging, conferences, fax and voicemail.
+      
      \item \textsl{Android Application Development:} \\
       Development of several android application for various products like ERCC, RSBY(Goverment Project), SUPERFAX.
-      Responsibilities include designing, implementing and Deployment of the Application.
      \item Designed and implemented several application based on the above infrastructure:
         \begin{enumerate}
-         \item Document conversion on windows machine for Superfax.
-         \item Worked for different module of SuperReceptionist this includes Database migration and front end module that has been done in a python-django framework.   
-         \item Setup of bulk emailing platform Amazon SES.
-	 \item Watermarking, OCR, Bar code detection for fax files
+         \item Design and Develop the Product SuperFax.
+         \item Worked for different module of SuperReceptionist.
+	     \item Watermarking, OCR, Bar code detection for fax files.
+	     \item Worked on Scalability issues like Bulk Call, IVR Cache, Call Packet missing, call hangup etc.
         \end{enumerate}
     \end{itemize}
 
@@ -80,12 +99,9 @@
              \begin{itemize}
               \item This project requires understanding of Artificial Intelligence, Neural Network and development in Encog (Java Based Framework for Neural Network).
 	       \item A Research project to analyze diagnosis errors thrown by CAN (Control Area  Network) Bus,
-   connected to a tractor, by using several network learning algorithms like Feed Forward Neural Network using Backward Propagation and Redial Basis Functional Neural Network.\\\\\\\\
+   connected to a tractor, by using several network learning algorithms like Feed Forward Neural Network using Backward Propagation and Redial Basis Functional Neural Network.
                \end{itemize}
       \end{itemize}
-      
-
-       
     %__________________________________________________________________________________________________________________
     % Other Projects
     \section{\mysidestyle Mtech Thesis and Other Projects}
@@ -99,20 +115,7 @@
         Cryptography. 
 	\item Guide: Dr. Sukumar Nandi (Prof. of CSE Dept., IIT Guwahati)
        \end{itemize}
-
- \textbf{Savings Point Mutual Fund (SPMF), Indore, MP} \hfill \textsl{Dec 2006 -- July 2007}\vspace{0mm}\\\vspace{0mm}%
-    \textsl{Department: IT} \hfill \textsl{BE Project}
-     \begin{itemize}
-     \item \textsl{Savings Point Online Portfolio:} 
-            \begin{enumerate}
-                \item We have Implemented different types of Mutual Fund Schemes,
-   like www.valueresearchonline.com 
-  while providing facility to the client to see their updated portfolio. We also provide the facility of automatic downloading of NAV’s from http://www.amfiindia.com at 00:00am and 
-        converting downloaded HTML format NAV to text format.
-           \end{enumerate}
-
-      \end{itemize}
-      
+       
     \textbf{Tata International Limited (TIL), Dewas, MP} \hfill \textsl{Dec 2006 -- July 2007}\vspace{0mm}\\\vspace{0mm}%
     \textsl{Department: IT} \hfill \textsl{Intern-IT}
      \begin{itemize}
@@ -122,28 +125,14 @@
 	      \end{itemize}
      \end{itemize}
 
-    \textbf{Robotic Maze Solver}\vspace{0mm}\\\vspace{0mm}%
-    \textsl{Mobile Robotics} \hfill \textsl{Jan 2008 -- June 2008}  
-       \begin{itemize} 
-	\item Algorithm to determine the shortest route to exit of the maze and Used wall information stored during the 
-           exploration of the maze to determine the quickest route to the exit.
-	\item Guide: Dr. S.B. Nair (Prof. of CSE Dept., IIT Guwahati)
-       \end{itemize}
-
     %__________________________________________________________________________________________________________________
     % Other Projects
-   
-    
-
-
     %__________________________________________________________________________________________________________________
     % Certifications
-    \section{\mysidestyle Certifications}
+    \section{\mysidestyle Certifications and Paper Publish}
      \begin{itemize}
       \item Sun Certified Programmer (SCJP) for Java 2 Platform 1.5
-      \item Sun Certified Web Component Developer (SCWCD) Java 2 Platform
-      \item MCTS (Microsoft Certified Technology Specialist) in .NET Framework 2.0 Application Development Foundation
-      \item MCTS (Microsoft Certified Technology Specialist) in .NET Framework 2.0 Web-Based Client Development
+      \item Published the Paper on Digital Signature Based Proxy Signature Scheme where proposed ECDLP based solution for this scheme.
 \end{itemize}
 
      
