--- a/resume.tex
+++ b/resume.tex
@@ -43,7 +43,7 @@
     % Professional Experience
     \section{\mysidestyle Work Experience}
 
-    \textbf{ScaleArc, Mumbai, Maharashtra }\hfill \textsl{Dec 2013 -- present}\vspace{0mm}\\\vspace{0mm}%
+    \textbf{ScaleArc, Mumbai, Maharashtra }\hfill \textsl{Dec 2013 -- Jan 2018}\vspace{0mm}\\\vspace{0mm}%
     \textsl{Senior Member of Techinial Staff-II}      \begin{itemize}
     \item \textsl{DBaaS: DataBase as a Service Platform}: 
     \begin{enumerate}
@@ -71,7 +71,7 @@
     \end{itemize}
     
     \textbf{Knowlarity Communication, Gurgaon, Haryana}   \hfill \textsl{June 2010 -- July 2013} \vspace{0mm}\\\vspace{0mm}%
-           \textsl{R\&D Engineer} 
+           \textsl{Senior Software Engineer} 
     \begin{itemize}
      \item \textsl{Knowlus: Design and Development of Telephony Platform:} \\
        A Telephony Platform that consists of Multiple Services like Incalld, Outcalld and FreeSWITCH to build solutions for virtual call centers, call bridging, conferences, fax and voicemail.
@@ -88,7 +88,7 @@
     \end{itemize}
 
     \textbf{John Deere, Pune, Maharashtra }\hfill \textsl{July 2009 -- June 2010}\vspace{0mm}\\\vspace{0mm}%
-    \textsl{Department: Architecture and Innovation Group} 
+    \textsl{Post Graduate Engineering Trainees} 
      \begin{itemize}
      \item \textsl{Distributed Computing and Machine Diagnostics:} 
             \begin{itemize}
