--- a/resume.tex
+++ b/resume.tex
@@ -42,6 +42,18 @@
     %__________________________________________________________________________________________________________________
     % Professional Experience
     \section{\mysidestyle Work Experience}
+    
+     \textbf{Oracle, Bangalore }\hfill \textsl{Mar 2018 -- Present}\vspace{0mm}\\\vspace{0mm}%
+    \textsl{Principal Member of Techinial Staff}  
+    \begin{itemize}
+    \item \textsl{OCI Cloud: Exadata Cloud Service Platform }: 
+    \begin{enumerate}
+    \item Build a Platform for Exadata Cloud Infrastructure 
+    \item Created multiple MicroServices for Fleet Manager,  VM Manager.
+    \item Build a Rolling Upgrade Solution for Zero downtime upgrade for HA System
+    \item Rest API Development for Horizontal scaling of cpu, memory, storage.
+    \end{enumerate}
+    \end{itemize}
 
     \textbf{ScaleArc, Mumbai, Maharashtra }\hfill \textsl{Dec 2013 -- Jan 2018}\vspace{0mm}\\\vspace{0mm}%
     \textsl{Senior Member of Techinial Staff-II}      \begin{itemize}
